# CHAINNOVA

./: .env.example  .gitignore  .replit  Anchor.toml  Cargo.toml  bridge-evm-evm-state.json  bridge-evm-state.json  bridge-state.json  dividend-keeper-state.json  hardhat.config.cts  package-lock.json  package.json  replit.md  skills-lock.json  solana-vault.json  tailwind.config.ts  tsconfig.hardhat.json  vite.config.ts
.agents/: agent_assets_metadata.toml
attached_assets/: ChainNova_Feature_Breakdown.md  Pasted---1775889735199_1775889735199.txt  Pasted--1-Solana-Vault-Replit-Secrets-2--1774461844219_1774461844220.txt  Pasted--1-client-index-html-head-og-image-twitter-meta--177377_1773773192180.txt  Pasted--1-client-src-pages-Bridge-tsx--1774189209168_1774189209169.txt  Pasted--1-server-storage-ts-getAgents-mock-id-1-nam-1773770732_1773770732749.txt  Pasted--3-1-vite-config-ts-build-build-minify-terser-terserOpt_1773771115405.txt  Pasted--A-Token-Dashboard-0x0a9c2e3cda80a828334bf-177588126154_1775881261549.txt  Pasted--CHAINNOVA-v2-push-GitHub-1--1774187997952_1774187997953.txt  Pasted--EVM-only-Solana-BSC-Arbitrum-Ethereum-MVP--17741924285_1774192428552.txt  Pasted--GitHub-main-Solana-BSC-Arbitrum-E-1774193327005_1774193327005.txt  Pasted--Solana-BSC-1-Sol-1774200766894_1774200766894.txt  Pasted--bug-Bridge-v3-Solana-EVM-1774204022075_1774204022076.txt  (+2 more)
programs/wforgai-bridge/: Cargo.toml  SPEC.md
programs/wforgai-bridge/src/: errors.rs  lib.rs  state.rs
programs/wforgai-bridge/src/instructions/: admin.rs  bridge_out.rs  complete_transfer.rs  initialize.rs  mod.rs
(+95 files in other folders)
