[package]
name = "wforgai-bridge"
version = "0.1.0"
description = "Solana Anchor bridge program for wFORGAI wrapped SPL mint/burn"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "wforgai_bridge"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-program = "1.18"
hex = "0.4"
